tests/diagnostics/file_roles/main_entrypoint/in_test/expect.txt
# exit: 1
input/lib.test.coppice:1:10: error: main is only allowed in .bin.coppice files
  function main() -> nil {
           ^
